# STTC_Residual_RL

./: .gitignore  README.md  REPORT.md  compare.py  main.py  requirements.txt
matlab/: wmr_tracking.m
paper/: add_xrefs.py  build_paper.py  content_en.py  content_zh.py  equations.py  figstyle.py  inline.py  make_diagrams.py  make_figures.py  omml.py
rl/: __init__.py  algos.py  eval_residual.py  evaluate.py  gazebo_env.py  gazebo_residual_env.py  plot_algo_compare.py  residual_env.py  tb3_env.py  train.py  train_gazebo.py  train_tb3.py  wmr_env.py
rl/models/: ddpg_mix_vecnorm.pkl  ppo_mix_vecnorm.pkl  res_mix_vecnorm.pkl  resna_mix_vecnorm.pkl  sac_mix_vecnorm.pkl  smoke_mix_vecnorm.pkl  tb3sac_dr_vecnorm.pkl  tb3sac_gz10_ckpt_vecnormalize_20000_steps.pkl  tb3sac_gz10_ckpt_vecnormalize_40000_steps.pkl  tb3sac_gz10_vecnorm.pkl  tb3sac_gz_ckpt_vecnormalize_100000_steps.pkl  tb3sac_gz_ckpt_vecnormalize_120000_steps.pkl  tb3sac_gz_ckpt_vecnormalize_140000_steps.pkl  tb3sac_gz_ckpt_vecnormalize_20000_steps.pkl  tb3sac_gz_vecnorm.pkl  (+8 more)
ros2_ws/: diag_rl.py  plot_experiment.py  plot_experiment_line.py  plot_residual.py  plot_veloop.py  run_experiment.py
ros2_ws/src/wmr_tb3/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/wmr_tb3/launch/: gazebo_slip.launch.py  track.launch.py
ros2_ws/src/wmr_tb3/models/tb3_burger_slip/: model.config
ros2_ws/src/wmr_tb3/wmr_tb3/: controller_core.py  tracking_node.py  trajectories.py
ros2_ws/src/wmr_tb3/worlds/: empty_fast.world
wmr/: __init__.py  controller.py  model.py  params.py  simulate.py  trajectories.py
(+15 files in other folders)
