<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wmr_tb3</name>
  <version>0.1.0</version>
  <description>Slipping trajectory tracking control (Lu et al., ICIEA 2024)
    applied to TurtleBot3: paper kinematic backstepping + adaptive slip
    estimation, publishing cmd_vel.</description>
  <maintainer email="n28141050@gs.ncku.edu.tw">eugene</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
